# poc-django-stripe

./: .env.tpl  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
conda/: dev.yaml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  production.py  test.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  healthcheck.sh
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
poc_django_stripe/: conftest.py
poc_django_stripe/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
poc_django_stripe/payments/: apps.py  urls.py  utils.py  views.py
poc_django_stripe/payments/static/payments/js/: main.js
poc_django_stripe/payments/templates/: cancel.html  customer-portal.html  home.html  success.html
poc_django_stripe/payments/templates/payments/: base.html  checkout.html  customer-portal.html  main.html  subscriptions.html
poc_django_stripe/payments/templates/payments/subscription/: cancelled.html  main.html  success.html
poc_django_stripe/payments/tests/: test_config.py
poc_django_stripe/static/js/: main.js  payments.js
poc_django_stripe/templates/: base.html
poc_django_stripe/users/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
poc_django_stripe/users/api/: views.py
poc_django_stripe/users/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_alter_user_id.py  0004_alter_user_managers.py  0005_alter_user_managers.py
poc_django_stripe/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
requirements/: base.txt  local.txt  production.txt
