[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py38", "py39"]

[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "migrations/*", "*.egg-info"]

[tool.poetry]
name = "poc-django-stripe"
version = "0.1.0"
description = ""
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "21.2.0"
celery = "5.1.0"
dj-stripe = "^2.6"
django = "3.2.*"
django-allauth = "0.45.0"
django-allauth-2fa = "0.8"
django-appconf = "1.0.4"
django-bootstrap-breadcrumbs = "0.9.2"
django-celery-beat = "2.2.0"
django-compressor = "2.4.1"
django-constance = "2.8.0"
django-crispy-forms = "1.13.0"
django-currentuser = "0.5.3"
django-envelope = "1.4"
django-environ = "0.4.5"
django-filter = "2.4.0"
django-invitations = "1.9.3"
django-maintenance-mode = "0.16.0"
django-organizations = "2.0.0"
django-otp = "1.0.3"
django-redis = "4.12.1"
django-simple-history = "3.0.0"
django-social-share = "2.2.1"
django-stronghold = "0.4.0"
django-tables2 = "2.3.4"
django-tables2-column-shifter = "^2.0.3"
django-timezone-field = "4.1.2"
django-two-factor-auth = "1.13.1"
django-user-agents = "0.4.0"
django-user-sessions = "1.7.1"
django-htmlmin = "^0.11.0"
geoip2 = "4.1.0"
importlib-metadata = "^4.0.1"
jsonfield = "3.1.0"
maxminddb = "2.0.3"
nodeenv = "1.6.0"
oauthlib = "3.1.0"
psycopg2-binary = "2.8.6"
pytz = "2021.1"
PyYAML = "5.4.1"
rcssmin = "1.0.6"
redis = "3.5.3"
regex = "2021.4.4"
reportlab = "3.5.67"
requests = "2.25.1"
requests-oauthlib = "1.3.0"
stripe = "^2.65"
toml = "0.10.2"
django-anymail = {version = "8.4", extras = ["mailgun"]}
django-phonenumber-field = "^5.1.0"
phonenumberslite = "^8.12.21"
django-picklefield = "^3.0.1"
tablib = "^3.0.0"
Django = "^3.2"
crispy-bootstrap5 = "0.6"
djangorestframework = "3.13.1"
django-cors-headers = "3.11.0"
drf-spectacular = "0.21.1"
argon2-cffi = "21.3.0"

[tool.poetry.dev-dependencies]
alabaster = "0.7.12"
black = "20.8b1"
coverage = "^6.3.1"
django-extensions = "3.1.3"
django-debug-toolbar = "3.2.1"
docutils = ">=0.14,<0.18"
flake8 = "3.9.1"
flake8-isort = "4.0.0"
isort = "5.8.0"
mypy = "0.812"
mypy-extensions = "0.4.3"
pre-commit = "2.12.1"
pycodestyle = "2.7.0"
pytest = "6.2.3"
pytest-django = "4.2.0"
pytest-sugar = "0.9.4"
Sphinx = "3.5.4"
sphinx-autobuild = "2021.3.14"
sphinxcontrib-applehelp = "1.0.2"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "1.0.3"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.4"
typing-extensions = "3.7.4.3"
Werkzeug = "1.0.1"
whitenoise = "5.2.0"
django-stubs = "^1.8.0"
pytest-cov = "^3.0.0"
factory-boy = "^2.8.1"
